--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,23 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:design:25.0.1'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
+    compile 'com.google.firebase:firebase-database:9.8.0'
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     testCompile 'junit:junit:4.12'
 }
 
-
 apply plugin: 'com.google.gms.google-services'
+
+
+
+
+
+
+
+
+
